<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    tools:context=".ItemList">

    <TextView
        android:id="@+id/text_header_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/text_header_2"
        android:textAlignment="center"
        android:textColor="#606060"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_medium"
        android:onClick="getItems"
        android:text="@string/item_1"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="#4DB6AC"
        android:textSize="18sp"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_header_2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_medium"
        android:onClick="getItems2"
        android:text="@string/item_2"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="#4DB6AC"
        android:textSize="18sp"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_medium"
        android:onClick="getItems3"
        android:text="@string/item_3"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="#4DB6AC"
        android:textSize="18sp"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_medium"
        android:onClick="getItems4"
        android:text="@string/item_4"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="#4DB6AC"
        android:textSize="18sp"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_medium"
        android:onClick="getItems5"
        android:text="@string/item_5"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="#4DB6AC"
        android:textSize="18sp"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_medium"
        android:onClick="getItems6"
        android:text="@string/item_6"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="#4DB6AC"
        android:textSize="18sp"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="getItems7"
        android:text="@string/item_7"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="#4DB6AC"
        android:textSize="18sp"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        android:fontFamily="@font/poppins_medium" />

    <Button
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_medium"
        android:onClick="getItems8"
        android:text="@string/item_8"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="#4DB6AC"
        android:textSize="18sp"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_medium"
        android:onClick="getItems9"
        android:rotationY="0"
        android:text="@string/item_9"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="#4DB6AC"
        android:textSize="18sp"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button10"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_medium"
        android:onClick="getItems10"
        android:text="@string/item_10"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="#4DB6AC"
        android:textSize="18sp"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

</androidx.constraintlayout.widget.ConstraintLayout>